# RootNode

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.module.css  App.tsx  api.ts  assets.d.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: helpers.rs  main.rs  types.rs
src-tauri/src/commands/: keychain.rs  ldap.rs  mod.rs  profiles.rs  schema.rs
src-tauri/src/services/: keychain.rs  ldap_service.rs  mod.rs  profile_store.rs  schema_cache.rs
src/components/: AboutModal.module.css  AboutModal.tsx  AttributeRow.module.css  AttributeRow.tsx  BreadcrumbBar.module.css  BreadcrumbBar.tsx  EntryDetail.module.css  EntryDetail.tsx  MultiValueModal.module.css  MultiValueModal.tsx  NewEntryForm.module.css  NewEntryForm.tsx  ProfileForm.module.css  ProfileForm.tsx  ReauthModal.module.css  ReauthModal.tsx  ResizeHandle.module.css  ResizeHandle.tsx  ResultsList.module.css  ResultsList.tsx  SearchBar.module.css  SearchBar.tsx  ServerSidebar.module.css  ServerSidebar.tsx  TreePanel.module.css  TreePanel.tsx
src/hooks/: useProfiles.ts  useSearch.ts
