[package]
name = "rootnode"
version = "1.0.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
ldap3 = { version = "0.11", features = ["tls-native"] }
native-tls = "0.2"
security-framework = "3"
dirs = "6"
chrono = "0.4"
hex = "0.4"
base64 = "0.22"
